...
        showSnackBar(
            message: "Signup Failed", context: context, color: Colors.red);
      },
      (success) {
        state = state.copyWith(isLoading: false, error: null);
        showSnackBar(
            message: 'Signup Success', context: context, color: Colors.green);
        Navigator.popAndPushNamed(context, AppRoute.homeRoute);
      },
    );
  }

  Future<void> loginUser(
...
