...
    Future get_review(id) async {
      await ref.watch(homeViewModelProvider.notifier).get_all_reviews(id);
    }

    return Scaffold(
      appBar: AppBar(
        title: const Text('Homepage'),
        automaticallyImplyLeading: false,
      ),
      backgroundColor: const Color.fromARGB(255, 78, 92, 101),
      body: RefreshIndicator(
        onRefresh: () async {
          await ref.read(homeViewModelProvider.notifier).getAllPackages();
...
